[package]
name = "hblib"
version = "0.1.0"
authors = ["Kunal Mehta <legoktm@debian.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dirs-next = "2"
flexi_logger = {version = "0.17.1", default-features = false}
log = "0.4"
mediawiki = "0.2.7"
serde = {version = "1", features = ["derive"]}
similar = "1.1"
toml = "0.5"
