[package]
name = "hblib"
version = "0.1.0"
authors = ["Kunal Mehta <legoktm@debian.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flexi_logger = {version = "0.17.1", default-features = false}
log = "0.4"
similar = "1.1"
