[package]
name = "mfdarchiver-rs"
version = "0.1.0"
authors = ["Kunal Mehta <legoktm@member.fsf.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
chrono = "0.4"
dirs-next = "2"
flexi_logger = {version = "0.17.1", default-features = false}
log = "0.4"
mediawiki = "0.2.6"
parsoid = "0.5.0-alpha.1"
regex = "1"
serde = {version = "1", features = ["derive"]}
similar = "1.1"
tokio = {version = "1", features = ["full"]}
toml = "0.5"
toolforge = "0.2"
